exports[`Icon IconAdd should shallow IconBase 1`] = `
<IconBase
  ariaLabel={null}
  data-name="Layer 1"
  focusable={false}
  height="1em"
  isBidi={false}
  isSpin={false}
  viewBox="0 0 48 48"
  width="1em"
  xmlns="http://www.w3.org/2000/svg">
  <path
    d="M48 21H27V0h-6v21H0v6h21v21h6V27h21z" />
</IconBase>
`;

exports[`Icon IconComment should render IconBase with custom-class 1`] = `
<svg
  aria-hidden="true"
  class="icon is-bidi custom-class"
  data-name="Layer 1"
  focusable="false"
  height="1em"
  viewbox="0 0 48 48"
  width="1em"
  xmlns="http://www.w3.org/2000/svg">
  <path
    d="M46 2.1H2a2 2 0 0 0-2 2v28a2 2 0 0 0 2 2h31.2L45 45.9V34.1h1a2 2 0 0 0 2-2v-28a2 2 0 0 0-2-2z" />
</svg>
`;

exports[`Icon IconComment should shallow IconBase 1`] = `
<IconBase
  ariaLabel={null}
  className=""
  data-name="Layer 1"
  focusable={false}
  height="1em"
  isBidi={true}
  isSpin={false}
  viewBox="0 0 48 48"
  width="1em"
  xmlns="http://www.w3.org/2000/svg">
  <path
    d="M46 2.1H2a2 2 0 0 0-2 2v28a2 2 0 0 0 2 2h31.2L45 45.9V34.1h1a2 2 0 0 0 2-2v-28a2 2 0 0 0-2-2z" />
</IconBase>
`;

exports[`Icon IconSpinner should shallow IconBase 1`] = `
<IconBase
  ariaLabel={null}
  className=""
  data-name="Layer 1"
  focusable={false}
  height="1em"
  isBidi={false}
  isSpin={true}
  viewBox="0 0 48 48"
  width="1em"
  xmlns="http://www.w3.org/2000/svg">
  <path
    d="M24 0a3.8 3.8 0 1 1-3.8 3.8A3.8 3.8 0 0 1 24 0zm0 40.4a3.8 3.8 0 1 1-3.8 3.8 3.8 3.8 0 0 1 3.8-3.8zm20.2-20.2a3.8 3.8 0 1 1-3.8 3.8 3.8 3.8 0 0 1 3.8-3.8zm-40.4 0A3.8 3.8 0 1 1 0 24a3.8 3.8 0 0 1 3.8-3.8zM38.3 5.9a3.8 3.8 0 1 1-3.8 3.8 3.8 3.8 0 0 1 3.8-3.8zM9.7 34.5a3.8 3.8 0 1 1-3.8 3.8 3.8 3.8 0 0 1 3.8-3.8zm0-28.6a3.8 3.8 0 1 1-3.8 3.8 3.8 3.8 0 0 1 3.8-3.8zm28.6 28.6a3.8 3.8 0 1 1-3.8 3.8 3.8 3.8 0 0 1 3.8-3.8z" />
</IconBase>
`;
